name:               murl
version:            0.1.0.0

synopsis:           Micro-URL API—URL Shortener
description:        
  Servant based URL shortening service.  Small and featureless.

homepage:           https://github.com/alunduil/murl

license:            MIT
license-file:       LICENSE

author:             Alex Brandt
maintainer:         alunduil@alunduil.com

copyright:          (c) 2016 murl developers

category:           Web

build-type:         Simple

-- data-files:         
-- extra-source-files:  

cabal-version:      >=1.10

source-repository head
  type:     git
  location: git://github.com/alunduil/murl.git

executable murl
  hs-source-dirs:   src
  main-is:          Main.hs

  default-language: Haskell2010

  other-modules:    Murl.Api
                    Murl.Api.Statuses
                    Paths_murl
  
  other-extensions: DataKinds,
                    TypeOperators
  
  build-depends:    aeson          ==0.11.*,
                    base           ==4.8.*,
                    containers     ==0.5.*,
                    servant-server ==0.8.*,
                    stm            ==2.4.*,
                    transformers   ==0.4.*,
                    warp           ==3.2.*
