name:               murl
version:            0.1.0.0

synopsis:           Micro-URL API—URL Shortener
description:        
  Servant based URL shortening service.  Small and featureless.

homepage:           https://github.com/alunduil/murl

license:            MIT
license-file:       LICENSE

author:             Alex Brandt
maintainer:         alunduil@alunduil.com

copyright:          (c) 2016 murl developers

category:           Web

build-type:         Simple

-- data-files:         
-- extra-source-files:  

cabal-version:      >=1.10

source-repository head
  type:     git
  location: git://github.com/alunduil/murl.git

executable murl
  hs-source-dirs:   src
  main-is:          Main.hs

  default-language: Haskell2010

  other-modules:    Murl.Api
                    Murl.Api.Statuses
                    Murl.Api.Urls
                    Paths_murl
                    Stores
  
  other-extensions: DataKinds,
                    DeriveGeneric
                    TypeOperators
  
  build-depends:    aeson                 ==0.11.*,
                    base                  ==4.8.*,
                    base64-bytestring     ==1.0.*,
                    bimap                 ==0.3.*,
                    binary                ==0.7.*,
                    bytestring            ==0.10.*,
                    bytestring-conversion ==0.3.*,
                    containers            ==0.5.*,
                    exceptions            ==0.8.*,
                    hashable              ==1.2.*,
                    http-api-data         ==0.2.*,
                    http-types            ==0.9.*,
                    servant-server        ==0.8.*,
                    stm                   ==2.4.*,
                    transformers          ==0.4.*,
                    warp                  ==3.2.*
