name:               murl
version:            0.1.0.0

synopsis:           Micro-URL API—URL Shortener
description:        
  Servant based URL shortening service.  Small and featureless.

homepage:           https://github.com/alunduil/murl

license:            MIT
license-file:       LICENSE

author:             Alex Brandt
maintainer:         alunduil@alunduil.com

copyright:          (c) 2016 murl developers

category:           Web

build-type:         Simple

-- data-files:         
-- extra-source-files:  

cabal-version:      >=1.10

source-repository head
  type:     git
  location: git://github.com/alunduil/murl.git

library
  hs-source-dirs:   src
  default-language: Haskell2010

  other-extensions: DataKinds,
                    DeriveGeneric
                    TypeOperators

  exposed-modules:  Murl.Api
                    Murl.Api.Statuses
                    Murl.Api.Urls
                    Murl.Store.Urls

  other-modules:    Paths_murl

  build-depends:    aeson                 ==0.11.*,
                    base                  >=4.7.0.0 && <4.9.0.0,
                    base64-bytestring     ==1.0.*,
                    bimap                 ==0.3.*,
                    binary                ==0.7.*,
                    bytestring            ==0.10.*,
                    bytestring-conversion ==0.3.*,
                    exceptions            ==0.8.*,
                    hashable              ==1.2.*,
                    http-api-data         ==0.2.*,
                    http-types            ==0.9.*,
                    servant-server        ==0.8,
                    stm                   ==2.4.*,
                    transformers          ==0.4.*
                    
executable murl
  hs-source-dirs:   src
  main-is:          Main.hs

  default-language: Haskell2010

  other-extensions: TemplateHaskell

  build-depends:    aeson                 ==0.11.*,
                    base                  >=4.7.0.0 && <4.9.0.0,
                    base64-bytestring     ==1.0.*,
                    bimap                 ==0.3.*,
                    binary                ==0.7.*,
                    bytestring            ==0.10.*,
                    bytestring-conversion ==0.3.*,
                    exceptions            ==0.8.*,
                    hashable              ==1.2.*,
                    http-api-data         ==0.2.*,
                    http-types            ==0.9.*,
                    murl,
                    servant-server        ==0.8,
                    stm                   ==2.4.*,
                    transformers          ==0.4.*,
                    warp                  ==3.*

test-suite test-murl
  type:             exitcode-stdio-1.0
  hs-source-dirs:   tests/murl
  main-is:          Main.hs

  default-language: Haskell2010

  other-modules:    Tests.Murl.Api.Urls

  build-depends:    base                       >=4.7.0.0 && <4.9.0.0,
                    murl,
                    QuickCheck                 ==2.8.*,
                    test-framework             ==0.8.*,
                    test-framework-quickcheck2 ==0.3.*,
                    test-framework-th          ==0.2.*
